# 6502-and-friends

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  flash.sh
apps/6502_logic_analyzer/: 6502_analyzer.ino
apps/debug/: CMakeLists.txt  main.c
apps/sram_healthcheck/: CMakeLists.txt  sram_tester.ino
apps/sram_hexdump/: CMakeLists.txt  main.c
apps/sram_injector/: CMakeLists.txt  main.c
arduino_bin/: 6502_analyzer.ino  debug.hex  sram_hexdump.hex  sram_hexdump.ino  sram_injector.ino
arduino_bin/sram_tester/: sram_tester.ino
cmake/: avr-toolchain.cmake
config/: pin_bus.c  pin_bus.h
docs/: 6502__ctrl_8c.js  6502__ctrl_8c_8obj_8d.html  CMakeCCompilerId_8c.html  annotated_dup.js  classes.html  debug_8dir_2apps_2debug_2main_8c_8obj_8d.html  dir_0b50e42c4e92e304b14f27bcc8c3d4af.html  dir_0b50e42c4e92e304b14f27bcc8c3d4af.js  dir_0b6b3e484a7b4f145dc0c61edf319e7c.html  dir_0b6b3e484a7b4f145dc0c61edf319e7c.js  dir_112f856e9f44f593eda8db364a92433a.html  dir_201180f085bdacbb047b10eb2b480c3a.html  dir_325e0a5f0bfa91c7cd380d2fa1f5563f.js  dir_3ae43a036a28d5a95364c7328b97d672.js  dir_45f5a25a9d29f3258a5dcd55de035dd5.js  dir_4d41b87390fe3ff1d774f9153c36c452.js  dir_4e3e3be1a1a59f92eb6641904c0701c0.html  dir_4e5768c945de014faf8566843e592152.js  dir_52eccb351bfe5efa343e50629abb4f54.js  dir_65ab999f8650a06187fbbfdaa1789ce2.js  dir_67ac9041671d5ebe5878cb2db0d79eb8.html  dir_6bf8c19f8237111df5cb0a430ff40cd8.js  dir_7355675f593e372b76066e5167f07703.html  dir_88559b7d2acecc54c4fb30839529f7e7.html  dir_9654b8d08f4bba4e84b362c5fd320bee.js  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_9f351d46ce3cc29445a41dc3a31e6919.js  dir_b4d6f175b33edcf901b87ee260cccf25.html  dir_b7c3161f2070b1a132ca8634f6daabe1.js  dir_f068ed77d824e41de5448a38fb085024.js  dir_f157850460ab12d7e66d45302685d04f.js  globals_eval.html  md_README.html  pin__bus_8c.html  sram__ctrl_8h_source.html  sram__gpio_8c.html  sram__gpio_8h_source.html  sram__healthcheck_2main_8c.html  sram__healthcheck_2main_8c.js  sram__hexdump_2main_8c.js  (+6 more)
docs/search/: all_10.js  all_6.js  all_7.js  all_8.js  all_c.js  all_e.js  classes_0.js  defines_2.js  defines_d.js  enums_0.js  enums_2.js  files_3.js  functions_0.js  groups_1.js  groups_3.js  pages_1.js  searchdata.js  variables_4.js  variables_5.js  variables_7.js
html/: 6502__ctrl_8c.html  6502__ctrl_8h.html  6502__ctrl_8h.js  6502__ctrl_8h_source.html  annotated.html  debug_2main_8c.html  debug_2main_8c.js  dir_00b0bb58ba55c04a269c3b207cd2ce02.html  dir_00b0bb58ba55c04a269c3b207cd2ce02.js  dir_03139613e4a18317ff6cbed444f4d9b2.html  dir_03139613e4a18317ff6cbed444f4d9b2.js  dir_081064826caba84ea6c6d6343786fb86.html  dir_081064826caba84ea6c6d6343786fb86.js  dir_0a3e5fb830b24a254308ab4df63b1a30.html  dir_0a3e5fb830b24a254308ab4df63b1a30.js  dir_112f856e9f44f593eda8db364a92433a.js  dir_11f1ae0d402f15936cea2fc218840b84.html  dir_11f1ae0d402f15936cea2fc218840b84.js  dir_1f9295dc05f122f24d280d53f567737e.html  dir_1f9295dc05f122f24d280d53f567737e.js  dir_201180f085bdacbb047b10eb2b480c3a.js  dir_2197599c8708260d5575cbb4b67ae8f3.html  dir_2197599c8708260d5575cbb4b67ae8f3.js  dir_27938e1c307aa410c0c8e97cdd1488ae.html  dir_27938e1c307aa410c0c8e97cdd1488ae.js  dir_325e0a5f0bfa91c7cd380d2fa1f5563f.html  dir_3ae43a036a28d5a95364c7328b97d672.html  dir_3c335caa76f2a760427135495638094e.html  dir_3c335caa76f2a760427135495638094e.js  dir_45f5a25a9d29f3258a5dcd55de035dd5.html  dir_4ab5bc30d286f3785629df88117e40bd.html  dir_4ab5bc30d286f3785629df88117e40bd.js  dir_4d41b87390fe3ff1d774f9153c36c452.html  dir_4e3e3be1a1a59f92eb6641904c0701c0.js  dir_4e5768c945de014faf8566843e592152.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_52eccb351bfe5efa343e50629abb4f54.html  dir_5cefb66a2b3927b099ebe0b9254f9408.html  dir_63772b626f2709090f0bdca0f40827b4.html  dir_63772b626f2709090f0bdca0f40827b4.js  (+103 more)
html/search/: all_0.js  all_1.js  all_11.js  all_3.js  all_4.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  defines_5.js  defines_7.js  enumvalues_0.js  enumvalues_2.js  enumvalues_3.js  files_0.js  files_1.js  files_2.js  files_5.js  files_6.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  groups_0.js  groups_2.js  groups_4.js  pages_2.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_5.js  variables_6.js  (+1 more)
lib/: CMakeLists.txt
lib/6502_ctrl/: 6502_ctrl.c  6502_ctrl.h
lib/clock_ctrl/: clock_ctrl.c  clock_ctrl.h
lib/lcd/: lcd_lib.c  lcd_lib.h
lib/sram_ctrl/: sram_ctrl.c  sram_ctrl.h
lib/sram_gpio/: sram_gpio.c  sram_gpio.h
lib/sram_ops/: sram_ops.c  sram_ops.h
lib/sram_read/: sram_read.c  sram_read.h
lib/sram_write/: sram_write.c  sram_write.h
lib/uart/: uart.c  uart.h
